Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
     <p>TIL</p>
     <ul>
 <li>that Chrome is introducing a so-called <a href="https://blog.google/products/chrome/taking-aim-annoying-page-jumps-chrome/">scroll anchoring</a>, which prevents those sudden jumps back to the top of the page</li>
+<li>that the original version of a song from my childhood is France Gall&rsquo;s <a href="https://www.youtube.com/watch?v=rRva0YOVtcI">Poupée de cire, poupée de son</a>, and that there&rsquo;s a music genre/style called <em>yé-yé</em></li>
 </ul>
 
   </div>
