--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ p {
     <ul>
 <li>that Victor Hugo and his life-long mistress Juliette Drouet spent the first night together on 16 February 1833, which is the same date as Marius and Cosette (of <em>Les Misérables</em>)&rsquo;s wedding night.</li>
 <li>about <a href="https://en.wikipedia.org/wiki/Antinous">Antinous</a>, <a href="https://en.wikipedia.org/wiki/Gaius_Gracchus">Gracchus</a>, <a href="https://en.wikipedia.org/wiki/Louis_Antoine_de_Saint-Just">Saint-Just</a>, <a href="https://en.wikipedia.org/wiki/Harmodius_and_Aristogeiton">Aristogeiton, and Harmodius</a></li>
+<li>that I need to avoid using words like &ldquo;obviously,&rdquo; &ldquo;basically,&rdquo; &ldquo;simply,&rdquo; &ldquo;clearly&rdquo; etc. in my documentation, because <a href="https://css-tricks.com/words-avoid-educational-writing/">they&rsquo;re not any helpful</a></li>
 </ul>
 
   </div>
