--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that one of Apple&rsquo;s goals with every OS update is to break libraries and make developers suffer</li>
-<li>of <a href="https://www.backblaze.com">BackBlaze</a>, a (seems to be) great S3-alternative and good candidate for Koel&rsquo;s integration</li>
+<li>of <a href="https://www.backblaze.com">BackBlaze</a>, a (seems to be) great S3-alternative and good candidate for Koel&rsquo;s next integration</li>
 </ul>
 
   </div>
