--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ a {
     <ul>
 <li>that one of Apple&rsquo;s goals with every OS update is to break libraries and make developers suffer</li>
 <li>of <a href="https://www.backblaze.com">BackBlaze</a>, a (seems to be) great S3-alternative and good candidate for Koel&rsquo;s next integration</li>
+<li>of <a href="https://css-tricks.com/almanac/properties/s/scroll-behavior/"><code>scroll-behavior</code></a>, a new CSS property to define whether the browser should jump (<code>auto</code>) <code>smooth</code>ly scroll to an anchored location</li>
 </ul>
 
   </div>
