Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@ a {
 <li>that one of Apple&rsquo;s goals with every OS update is to break libraries and make developers suffer</li>
 <li>of <a href="https://www.backblaze.com">BackBlaze</a>, a (seems to be) great S3-alternative and good candidate for Koel&rsquo;s next integration</li>
 <li>of <a href="https://css-tricks.com/almanac/properties/s/scroll-behavior/"><code>scroll-behavior</code></a>, a new CSS property to define whether the browser should jump (<code>auto</code>) <code>smooth</code>ly scroll to an anchored location</li>
+<li>that support for CSS variables (aka &ldquo;custom properties&rdquo;) is <a href="http://caniuse.com/#search=css%20variable">pretty decent</a> now, which also means I should start using them, lest I get lagged behind</li>
+<li>of &ldquo;Culture add &gt; culture fit&rdquo;, quoting <a href="https://twitter.com/Una/status/846808949672366080">@Una</a>, a saying so awesome that GitLab <a href="https://gitlab.com/gitlab-com/www-gitlab-com/commit/ed1ddd8935807b2bfda52304ca64118d31822601">added it into their handbook</a></li>
 </ul>
 
   </div>
