Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ a {
     <ul>
 <li>that mobile navigation is <a href="https://blog.prototypr.io/bottom-navigation-interface-fa4bff52065f">moving to the bottom of the screens</a></li>
 <li>how to create slightly more advanced <a href="https://fishshell.com/">fish</a> functions</li>
+<li>that there&rsquo;s <a href="https://en.wikipedia.org/wiki/Christopher_Paul_Neil">this child molester</a> who posted swirled images of his face online, which then got un-swirled by the Interpol using computer technologies, leading to his arrest in 2007</li>
 </ul>
 
   </div>
