--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>when interrogated by an SS officer about his painting <em>Guernica</em>, &ldquo;Did you do that?&rdquo; Picasso replied, &ldquo;No, you did.&rdquo;</li>
-<li>that lodash uses <code>splice</code> in its mutative functions (<code>remove</code>, <code>pull</code> etc.), causing Vue&rsquo;s <a href="https://vuejs.org/v2/guide/list.html#Array-Change-Detection">array change detection</a> to fail</li>
+<li>that lodash uses <code>splice</code> in its mutative functions (<code>remove</code>, <code>pull</code> etc.), causing Vue&rsquo;s <a href="https://vuejs.org/v2/guide/list.html#Array-Change-Detection">array change detection</a> to fail (EDIT: this doesn&rsquo;t seem to be the cause, which I&rsquo;m too tired to find out now)</li>
 <li>how to change a Git commit&rsquo;s timestamp with <code>GIT_COMMITTER_DATE</code></li>
 </ul>
 
