Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ a {
 <li>of the latest guitarist of Stratovarius, Matias Kupiainen, and <a href="https://www.youtube.com/watch?v=Vl45xrH3j-s">his mad skills</a></li>
 <li>that Uber was still tracking its users even after the app had been deleted, and</li>
 <li>that Uber identified Apple personnel using geo-data and would obfuscate the app&rsquo;s code to hide said activity from Apple</li>
+<li>that people almost never kick in a street fight, simply because they&rsquo;re not properly trained – it takes a lot of skills to actually kick someone</li>
 </ul>
 
   </div>
