--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@ a {
     <p>TIL</p>
     <ul>
 <li>that JavaScript has a <a href="https://developer.mozilla.org/en/docs/Web/API/Battery_Status_API">battery status API</a></li>
+<li>that <em>absolute</em> pure water is actually lethal, because it would pull essential minerals out of your cells and leave you deader than dead</li>
+<li>of <a href="https://github.com/atech/postal">Postal</a>, an open-source SendGrid/Mailgun alternative</li>
 </ul>
 
   </div>
