--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@ a {
     <p>TIL</p>
     <ul>
 <li>of <a href="https://scotthelme.co.uk/a-new-security-header-referrer-policy/"><code>Referrer-Policy</code></a>, a new security header that allows controls over referrer information</li>
+<li>that PHP 5.4 and older have a funny (read: sad) easter egg, where adding <code>?=PHPE9568F34-D428-11d2-A769-00AA001ACF42</code> to the URL of a PHP script will produce the PHP logo</li>
+<li>that <code>php -r 'class A { public function __clone() { clone $this; } } clone new A();'</code> produces a SegFault error in PHP, a bug still exists in PHP 7</li>
 </ul>
 
   </div>
