Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@ a {
     <p>TIL</p>
     <ul>
 <li>of <a href="https://medium.com/@taylorotwell/tap-tap-tap-1fc6fc1f93a6"><code>tap</code></a>, one of Taylor Otwell&rsquo;s favorite Laravel helpers</li>
+<li>again, that you can use <code>unicode-range</code> to <a href="https://jakearchibald.com/2017/combining-fonts/">combine fonts</a> in CSS</li>
+<li>that the arguably best anagram in English is cinematographer/megachiropteran</li>
 </ul>
 
   </div>
