--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ a {
   <div itemprop="description">
     <p>TIL</p>
     <ul>
-<li>&ldquo;Butt&rdquo; is a valid SVG stroke-linecap value (credits <a href="https://twitter.com/dan_abramov/status/859038430570872833">@dan_abramov</a>)</li>
+<li>&ldquo;butt&rdquo; is a valid SVG stroke-linecap value (credits <a href="https://twitter.com/dan_abramov/status/859038430570872833">@dan_abramov</a>)</li>
+<li>that black coders are more likely to get a job offer but for less money</li>
 </ul>
 
   </div>
