Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that Basecamp open-sourced their <a href="https://github.com/basecamp/handbook/blob/master/README.md">employee handbook</a></li>
+<li>to use <code>async / await</code></li>
 </ul>
 
   </div>
