Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@ a {
     <ul>
 <li>that Basecamp open-sourced their <a href="https://github.com/basecamp/handbook/blob/master/README.md">employee handbook</a></li>
 <li>to use <code>async / await</code></li>
-<li>that to turn an object into an array, <code>[].concat(obj)</code> is <a href="https://jsperf.com/array-coerce">significantly slower</a> than <code>obj == null ? [] : (Array.isArray(obj) ? obj : [obj])</code>
-`</li>
+<li>that to turn an object into an array, <code>[].concat(obj)</code> is <a href="https://jsperf.com/array-coerce">significantly slower</a> than <code>obj == null ? [] : (Array.isArray(obj) ? obj : [obj])</code></li>
+<li>that Spotify users have made over 35 million playlists with emojis in their titles</li>
 </ul>
 
   </div>
