Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@ a {
     <p>TIL</p>
     <ul>
 <li>of Space Booze, massive (1000x the size of our solar system) clouds of alcohol floating around in our universe. A space booze has enough beer to let every human on earth drink 300,000 pint of beer for almost a billion years.</li>
+<li>that there are planets made of pure diamonds</li>
+<li>that a Venus year is shorter than a Venus day</li>
 </ul>
 
   </div>
