--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ a {
 <li>of Space Booze, massive (1000x the size of our solar system) clouds of alcohol floating around in our universe. A space booze has enough beer to let every human on earth drink 300,000 pint of beer for almost a billion years.</li>
 <li>that there are planets made of pure diamonds</li>
 <li>that a Venus year is shorter than a Venus day</li>
+<li>that cancer is <em>not</em> a desease, but rather the name for a group of different ones that have one thing in common: uncontrolled cell growth</li>
 </ul>
 
   </div>
