Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that, at least in the US, if you own a daycare you have to go through yearly training to renew the license, including how to spot a child abuse</li>
+<li>of <a href="https://www.facebook.com/AnimalRightsMedia/posts/894960120552165"><em>The Kiss of Judas</em></a>, a photo showing a bull running up to his breeder hoping he would save him, only to receive a hypocritical kiss and be sent back to his death</li>
 </ul>
 
   </div>
