Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ a {
     <ul>
 <li>that Michael Jackson once tried to buy Marvel so he could play Spider Man in the movies</li>
 <li>of <a href="http://coolinterestingstuff.com/the-strange-mystery-of-the-man-from-taured">the strange mystery of the man from Taured</a></li>
+<li>of <a href="https://hackernoon.com/apples-icons-have-that-shape-for-a-very-good-reason-720d4e7c8a14">curvature continuity</a>, or why Apple&rsquo;s icons have that shape</li>
 </ul>
 
   </div>
