Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ a {
     <ul>
 <li>that there&rsquo;s actually <a href="https://news.ycombinator.com/item?id=14273549">a LOT of people</a> who dislike Redux</li>
 <li>that Neil Amstrong refused to swear on the Bible that he actually did go to the moon</li>
+<li>that the lowland gorilla&rsquo;s scientific name is &ldquo;gorilla gorilla gorilla.&rdquo;</li>
 </ul>
 
   </div>
