--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that Elon Musk, in his early days, once flew to South East Asia and &ldquo;practiced poverty&rdquo; by live on $1 a day – eating nothing but oranges, hot dogs, and pasta</li>
+<li>that Norway once knighted <a href="https://en.wikipedia.org/wiki/Nils_Olav">a penguin</a></li>
 </ul>
 
   </div>
