Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that my OSS project <a href="https://github.com/phanan/koel">Koel</a> has a Scrunitizer code quality of 9.26 (very good), and I&rsquo;m quite proud of it</li>
-<li>of permanent shadows, or &ldquo;nuclear shadows,&rdquo; &ldquo;shadows&rdquo; formed by atom bomb explosions such as those in in Hiroshima and Nagasaki, such as <a href="https://qph.ec.quoracdn.net/main-qimg-ec8dc0a5cfe04cdf722f631443fe1144.webp">this one</a></li>
+<li>of permanent shadows, or &ldquo;nuclear shadows,&rdquo; &ldquo;shadows&rdquo; formed by atom bomb explosions such as those in Hiroshima and Nagasaki, such as <a href="https://qph.ec.quoracdn.net/main-qimg-ec8dc0a5cfe04cdf722f631443fe1144.webp">this one</a></li>
 <li>that &ldquo;biceps&rdquo; is actually a singular word, the plural form of which is &ldquo;biciptes&rdquo;</li>
 </ul>
 
