--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ a {
     <ul>
 <li>that my OSS project <a href="https://github.com/phanan/koel">Koel</a> has a Scrunitizer code quality of 9.26 (very good), and I&rsquo;m quite proud of it</li>
 <li>of permanent shadows, or &ldquo;nuclear shadows,&rdquo; &ldquo;shadows&rdquo; formed by atom bomb explosions such as those in Hiroshima and Nagasaki, such as <a href="https://qph.ec.quoracdn.net/main-qimg-ec8dc0a5cfe04cdf722f631443fe1144.webp">this one</a></li>
-<li>that &ldquo;biceps&rdquo; is actually a singular word, the plural form of which is &ldquo;biciptes&rdquo;</li>
+<li>that &ldquo;biceps&rdquo; is actually a singular word, the plural form of which is &ldquo;bicipites&rdquo;</li>
 <li>that a woman named Teri Horton once bought a painting by <a href="https://en.wikipedia.org/wiki/Jackson_Pollock">Jackson Pollock</a> for $5. After learning who he is, she managed to sell the painting for $50 million.</li>
 </ul>
 
