Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that the English word cereal is derived from &ldquo;Ceres,&rdquo; the Roman goddess of harvest and agriculture</li>
+<li>that there&rsquo;s no such a thing as &ldquo;World War II&rdquo; in Britain – British always refer to it as &ldquo;The Second World War&rdquo;</li>
 </ul>
 
   </div>
