--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>how to properly test traits and abstract classes with PHPUnit</li>
+<li>of <a href="https://en.wikipedia.org/wiki/Galactic_year">galactic years</a>, and that our sun is about 20 years old and will die at 54</li>
 </ul>
 
   </div>
