Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ a {
     <ul>
 <li>that Eminem doesn&rsquo;t allow swearing in his house</li>
 <li>that Wolverine was once torn in half by the Hulk, and was left that way for 3.5 years</li>
+<li>that <code>https://github.com/&lt;username&gt;.png</code> redirects to the user&rsquo;s current avatar: <a href="https://github.com/phanan.png">https://github.com/phanan.png</a></li>
 </ul>
 
   </div>
