--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that BBC has a <a href="https://www.bbc.com/pidgin">pidgin</a> version</li>
-<li>that after calling <a href="/post/29-08-17/"><code>Carbon::setTestNow($mockDate)</code></a> you should call <code>Carbon::setTestNow()</code> again (without arguments) to reset to the normal behavior and not affect another tests</li>
+<li>that after calling <a href="/post/29-08-17/"><code>Carbon::setTestNow($mockDate)</code></a> you should call <code>Carbon::setTestNow()</code> again (without arguments) to reset to the normal behavior and not affect other tests</li>
 </ul>
 
   </div>
