--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ a {
   <div itemprop="description">
     <p>TIL</p>
     <ul>
-<li>that the word &ldquo;animal&rdquo; has its root as <em>animal</em> (&ldquo;breath, spririt&rdquo;)</li>
+<li>that the word &ldquo;animal&rdquo; has its root as Latin&rsquo;s <em>anima</em> (&ldquo;breath, spririt&rdquo;)</li>
 <li>of <em>animism</em>, the belief that every place, every animal, every plant, and every natural phenomenon has awareness and feelings, and can communicate directly with humans</li>
 </ul>
 
