Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that <a href="https://www.youtube.com/watch?v=IzI1RBdK2_g">the Atari 2600 version of Donkey Kong</a> was developed to work on systems with 4,096 bytes of memory and 128 bytes of RAM</li>
+<li>that Scorpions&rsquo; <em><a href="https://www.youtube.com/watch?v=dYnS6WGjATU">White Dove</a></em> is a cover of Omega&rsquo;s <em><a href="https://www.youtube.com/watch?v=CGt-rTDkMcM">Gyöngyhajú lány</a></em></li>
 </ul>
 
   </div>
