Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>that any working phone, whether in service or not, will dial 911</li>
+<li>that yawning is visually contagious</li>
 </ul>
 
   </div>
