Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ a {
     <ul>
 <li>that any working phone, whether in service or not, will dial 911</li>
 <li>that yawning is visually contagious</li>
+<li>that putting batteries in a fridge doubles their lifespan</li>
 </ul>
 
   </div>
