--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ a {
 &gt;----&lt;
 </code></pre>
 
-<p>is called the _<a href="https://en.wikipedia.org/wiki/M%C3%BCller-Lyer_illusion">Müller-Lyner&rsquo;s illusion</a>_ and there are several variations of it</p>
+<p>is called the <a href="https://en.wikipedia.org/wiki/M%C3%BCller-Lyer_illusion"><em>Müller-Lyner&rsquo;s illusion</em></a> and there are several variations of it</p>
 
 <ul>
 <li>of table methods (<code>insertRow()</code>, <code>insertCell()</code> et. al.), <code>toggle()</code>, <code>matches()</code> and <a href="https://hackernoon.com/15-html-element-methods-youve-potentially-never-heard-of-fc6863e41b2a">other HTML element methods</a> that are not very popular but can certainly come in handy one day</li>
