Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ a {
   <div itemprop="description">
     <p>TIL</p>
     <ul>
-<li>that you can now point arbitraty text to URLs (ala HTML anchors) <a href="https://gist.github.com/egmontkob/eb114294efbcd5adb1944c9f3cb5feda">in supported terminals</a> and there&rsquo;s a <a href="https://github.com/sindresorhus/ink-link">package</a> for that</li>
+<li>that you can now point arbitrary text to URLs (ala HTML anchors) <a href="https://gist.github.com/egmontkob/eb114294efbcd5adb1944c9f3cb5feda">in supported terminals</a> and there&rsquo;s a <a href="https://github.com/sindresorhus/ink-link">package</a> for that</li>
 </ul>
 
   </div>
