Publishing to gh-pages (via script)

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ a {
     <p>TIL</p>
     <ul>
 <li>how to cache resources write an offline-first app with service workers</li>
+<li>that CSS gradients can look funny on iOS Safari and we might want to utilize (inset) box shadows instead</li>
 </ul>
 
   </div>
